--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@
         // =============================================
         const SPREADSHEET_ID = '1OEqh24L8mtMYkf1j8bAn7Q1GZjPqUrUNuY_ySau_5p4'
 ; // Substitua pelo ID da sua planilha
-        const API_KEY = AIzaSyB9TcVJoCR2A2AICG9oH7owHn2bMiBmhlM ; // Substitua pela sua API Key
+        const API_KEY = 'AIzaSyB9TcVJoCR2A2AICG9oH7owHn2bMiBmhlM'; // Substitua pela sua API Key
         let gapiInicializado = false;
 
         // =============================================
@@ -2942,3 +2942,4 @@
 </body>
 
 </html>
+
